[package]
name = "dnslib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns_derive = { path = "dns_derive" }
byteorder = "1.4.3"
rand = "0.8.5"
clap = "3.1.18"
simplelog = "0.12.0"
log = "0.4.17"

[lib]
name = "dnslib"
path = "src/lib.rs"

[[bin]]
name = "dnsquery"
path = "src/dnsquery/main.rs"
